<resources>
    <string name="app_name">fundamentals-exercise-4</string>
    <string name="btn_async_task">AsyncTask Activity</string>
    <string name="btn_loader">Loader Activity</string>
    <string name="btn_threads">Threads Activity</string>
    <string name="btn_create">Create</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_start">Start</string>
    <string name="msg_oncreate">Async Task created</string>
    <string name="msg_onstart">Async Task Started</string>
    <string name="msg_preexecute">Pre execute run</string>
    <string name="msg_postexecute">Post execute run</string>
    <string name="msg_oncancel">Async Task cancelled</string>
    <string name="msg_should_create_task">must click \"create\" task first</string>
    <string name="done">Done!</string>
</resources>
