<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

    <Button
        android:id="@+id/btnAsyncCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_create"
        app:layout_constraintEnd_toStartOf="@+id/btnAsyncStart"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btnAsyncStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_start"
        app:layout_constraintEnd_toStartOf="@+id/btnAsyncCancel"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/btnAsyncCreate"
        app:layout_constraintTop_toTopOf="@+id/btnAsyncCreate"
        />

    <Button
        android:id="@+id/btnAsyncCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/btnAsyncStart"
        app:layout_constraintTop_toTopOf="@+id/btnAsyncCreate"
        />

    <android.support.constraint.Barrier
        android:id="@+id/barrier2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="btnAsyncCancel,btnAsyncCreate,btnAsyncStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txtAsyncValue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/aqua"
        android:gravity="center"
        android:padding="48dp"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier2"
        />

</android.support.constraint.ConstraintLayout>
